--- a/index.html
+++ b/index.html
@@ -2,35 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="includes/style.css">
+    <title>Sveta Gimpelson</title>
 </head>
 <body>
 <header>
+    <a href="#" id="logo">Sveta</a>
     <nav>
         <ul>
-            <li><a href="/ex1/index.html">EX1</a> </li>
-            <li><a href="#">EX3 FORM</a></li>
-            <li><a href="#">FINAL PROJECT</a></li>
-            <li><a href="#">My GitHub</a></li>
+            <a href="/ex1/index.html">EX1</a> |
+            <a href="#">EX3 FORM</a> |
+            <a href="#">FINAL PROJECT</a> |
+            <a href="#">My GitHub</a>
         </ul>
     </nav>
-    <section><img src="img/sveta"></section>
-    <section>
-        <h2>סבטה גימפלסון</h2>
-        <p>רק על עצמי לספר ידעתי</p>
-    </section>
-    <section>
-        <h2>Programming Knowledge ans Skills</h2>
-        <ul>
-            <li><img src="img/c.png">C</li>
-            <li><img src="img/cpp.jpeg">C++</li>
-        </ul>
-    </section>
 </header>
 <main>
+    <section id="photo_section">
+        <h1> Sveta Gimpelson</h1>
+        <h3>"If you can dream it, you can do it." W.D.</h3>
+        <a href="https://github.com/Svetagim/ex2" class="link_github">Go to My Github</a>
+    </section>
+    <section class="second_section">
+        <h2>סבטה גימפלסון</h2>
+        <p class="about_myself">Risk management and analytics consultant at PwC
+            <br>
+            Second year software engeneering studing at Shenkar
+        </p>
+    </section>
+    <section>
+        <h2 class="skills">Programming Knowledge ans Skills</h2>
+        <ul>
+            <img src="images/c.png">C
+            <br>
+            <img src="images/cpp.jpeg">C++
+        </ul>
+    </section>
+
+
 
 </main>
-<footer>
+<footer class="bg_color_class">
 </footer>
 </body>
 </html>
