--- a/index.html
+++ b/index.html
@@ -5,44 +5,51 @@
     <link rel="stylesheet" href="includes/style.css">
     <title>Sveta Gimpelson</title>
 </head>
+
 <body>
-<header>
-    <a href="#" id="logo">Sveta</a>
-    <nav>
-        <ul>
-            <a href="/ex1/index.html">EX1</a> |
-            <a href="#">EX3 FORM</a> |
-            <a href="#">FINAL PROJECT</a> |
-            <a href="#">My GitHub</a>
-        </ul>
-    </nav>
-</header>
-<main>
-    <section id="photo_section">
-        <h1> Sveta Gimpelson</h1>
-        <h3>"If you can dream it, you can do it." W.D.</h3>
-        <a href="https://github.com/Svetagim/ex2" class="link_github">Go to My Github</a>
-    </section>
-    <section class="second_section">
-        <h2>סבטה גימפלסון</h2>
-        <p class="about_myself">Risk management and analytics consultant at PwC
-            <br>
-            Second year software engeneering studing at Shenkar
-        </p>
-    </section>
-    <section>
-        <h2 class="skills">Programming Knowledge ans Skills</h2>
-        <ul>
-            <img src="images/c.png">C
-            <br>
-            <img src="images/cpp.jpeg">C++
-        </ul>
-    </section>
-
-
-
-</main>
-<footer class="bg_color_class">
-</footer>
+    <header>
+        <a href="http://shenkar.html5-book.co.il/2017-2018/web1/dev_32/index.html" id="logo">Sveta</a>
+        <nav>
+            <ul>
+                <a href="../ex1/index.html" class="title_links">EX1</a> |
+                <a href="#" class="title_links">EX3 FORM</a> |
+                <a href="#" class="title_links">FINAL PROJECT</a> |
+                <a href="https://github.com/Svetagim/ex2" class="title_links">My GitHub</a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="photo_section">
+            <h1> Sveta Gimpelson</h1>
+            <p class="slogen">"If you can dream it, you can do it." W.D.</p>
+            <a href="https://github.com/Svetagim/ex2" target="_blank" class="link_github">Go to My Github</a>
+        </section>
+        <section class="about_myself_section">
+            <h2>סבטה גימפלסון</h2>
+            <p class="about_myself_content">
+                Risk management and analytics consultant at PwC
+                <br>
+                Second year software engineering studing at Shenkar
+                <br>
+                SARCASM: just one of the many services I offer
+            </p>
+        </section>
+        <section>
+            <h2 class="skills">Programming Knowledge ans Skills</h2>
+            <ul>
+                <li><img src="images/c.png" title="c" class="skills_img">C</li>
+                <li><img src="images/cpp.png" title="c++" class="skills_img">C++</li>
+                <li><img src="images/html5.png" title="html5" class="skills_img">HTML5</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <section class="footer_prop">
+            <a href="https://www.facebook.com/svetag" target="_blank" class="facebook"></a>
+            <a href="https://www.linkedin.com/in/sveta-gimpelson-23aa7887/" target="_blank" class="linkedin"></a>
+            <a href="mailto:svetagimpelson@gmail.com" target="_blank" class="my_mail">@SvetaGimpelson</a>
+        </section>
+    </footer>
 </body>
 </html>
+
