--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="http://shenkar.html5-book.co.il/2017-2018/web1/dev_32/index.html" id="logo">Sveta</a>
         <nav>
             <ul>
-                <a href="../ex1/index.html" class="title_links">EX1</a> |
+                <a href="ex1/index.html" class="title_links">EX1</a> |
                 <a href="#" class="title_links">EX3 FORM</a> |
                 <a href="#" class="title_links">FINAL PROJECT</a> |
                 <a href="https://github.com/Svetagim/ex2" class="title_links">My GitHub</a>
@@ -23,19 +23,20 @@
             <h1> Sveta Gimpelson</h1>
             <p class="slogen">"If you can dream it, you can do it." W.D.</p>
             <a href="https://github.com/Svetagim/ex2" target="_blank" class="link_github">Go to My Github</a>
+            <a href="#about_myself_section" class="to_next_section"></a>
         </section>
-        <section class="about_myself_section">
+        <section id="about_myself_section">
             <h2>סבטה גימפלסון</h2>
             <p class="about_myself_content">
                 Risk management and analytics consultant at PwC
                 <br>
-                Second year software engineering studing at Shenkar
+                Second year software engineering studying at Shenkar
                 <br>
                 SARCASM: just one of the many services I offer
             </p>
         </section>
         <section>
-            <h2 class="skills">Programming Knowledge ans Skills</h2>
+            <h2 class="skills">Programming Knowledge and Skills</h2>
             <ul>
                 <li><img src="images/c.png" title="c" class="skills_img">C</li>
                 <li><img src="images/cpp.png" title="c++" class="skills_img">C++</li>
