--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 SARCASM: just one of the many services I offer
             </p>
         </section>
-        <section>
+        <section class="skills_section">
             <h2 class="skills">Programming Knowledge and Skills</h2>
             <ul>
                 <li><img src="images/c.png" title="c" class="skills_img">C</li>
