--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <footer>
         <section class="footer_prop">
             <a href="https://www.facebook.com/svetag" target="_blank" class="facebook"></a>
+            <a href="mailto:svetagimpelson@gmail.com" target="_blank" class="gmail"></a>
             <a href="https://www.linkedin.com/in/sveta-gimpelson-23aa7887/" target="_blank" class="linkedin"></a>
             <a href="mailto:svetagimpelson@gmail.com" target="_blank" class="my_mail">@SvetaGimpelson</a>
         </section>
