--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="ex1/index.html" class="title_links">EX1</a> |
                 <a href="#" class="title_links">EX3 FORM</a> |
                 <a href="#" class="title_links">FINAL PROJECT</a> |
-                <a href="https://github.com/Svetagim/ex2" class="title_links">My GitHub</a>
+                <a href="https://github.com/Svetagim" class="title_links">My GitHub</a>
             </ul>
         </nav>
     </header>
@@ -22,7 +22,7 @@
         <section id="photo_section">
             <h1> Sveta Gimpelson</h1>
             <p class="slogen">"If you can dream it, you can do it." W.D.</p>
-            <a href="https://github.com/Svetagim/ex2" target="_blank" class="link_github">Go to My Github</a>
+            <a href="https://github.com/Svetagim" target="_blank" class="link_github">Go to My Github</a>
             <a href="#about_myself_section" class="to_next_section"></a>
         </section>
         <section id="about_myself_section">
